[tool.poetry]
name = "discrete-radon-transform"
version = "0.1.0"
description = "radon transform for straight lines detection"
authors = ["Kirill Semenovykh <semenovykh.ka@phystech.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
pillow = "^10.3.0"
tqdm = "^4.66.2"
pytest = "^8.1.1"
click = "^8.1.7"
requests = "^2.31.0"
opencv-python = "^4.9.0.80"
black = "^24.4.2"
safety = "^3.2.0"

[tool.coverage.report]
fail_under = 100

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
coverage = {extras = ["toml"], version = "^7.4.4"}
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"







[tool.poetry.scripts]
wiki = "discrete_radon_transform.console:wiki"
discrete-radon-transform = "discrete_radon_transform.console:main"